--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Build packages
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install --ignore-engines
+
       - name: elm-analyse
         uses: borales/actions-yarn@v2.0.0
         with:
