--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "elm-test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Confidenceman02/elm-animate-height#readme",
   "devDependencies": {
-    "elm-analyse": "^0.16.5"
+    "elm-analyse": "^0.16.5",
+    "elm-test": "^0.19.1-revision6"
   }
 }
