--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -19,3 +19,8 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: elm-analyse
+
+      - name: elm-test
+        uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: elm-test
