--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -23,4 +23,4 @@ jobs:
       - name: elm-test
         uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: elm-test
+          cmd: elm-test --compiler ./node_modules/.bin/elm
