--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "elm": "^0.19.1-5",
     "elm-analyse": "^0.16.5",
+    "elm-doc-preview": "^5.0.5",
     "elm-test": "^0.19.1-revision6"
   }
 }
