--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -1,6 +1,10 @@
-name: CI
+name: devops
 on:
   push:
+    branches:
+      - master
+      - release/*
+  pull_request:
     branches:
       - master
 jobs:
@@ -19,8 +23,3 @@ jobs:
         uses: borales/actions-yarn@v2.0.0
         with:
           cmd: elm-analyse
-
-      - name: elm-test
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: elm-test --compiler ./node_modules/.bin/elm
