--- a/package.json
+++ b/package.json
@@ -22,9 +22,20 @@
   },
   "homepage": "https://github.com/Confidenceman02/elm-animate-height#readme",
   "devDependencies": {
+    "@playwright/test": "^1.25.2",
+    "@tsconfig/node12": "^1.0.11",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
     "elm": "^0.19.1-5",
     "elm-analyse": "^0.16.5",
     "elm-doc-preview": "^5.0.5",
-    "elm-test": "^0.19.1-revision6"
+    "elm-test": "^0.19.1-revision6",
+    "mocha": "^10.0.0",
+    "playwright": "^1.25.2",
+    "prettier": "^2.7.1",
+    "start-server-and-test": "^1.14.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   }
 }
